<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.perport.haberuygulamasi.Login.Fragments.LoginFragment">


        <TextView
            android:id="@+id/text_giris"
            android:layout_width="254dp"
            android:layout_height="71dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:shadowColor="@color/yellow_dark"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            android:text="@string/giris"
            android:textAllCaps="true"
            android:textSize="34sp"
            android:textStyle="bold"
            android:translationZ="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:contextClickable="true"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="@string/hesabinizYokMu"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/kayitOlunText"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_giris" />

        <TextView
            android:id="@+id/kayitOlunText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:contextClickable="true"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="@string/kayitOlun"
            android:textColor="@color/clickableText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/text_giris" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contextClickable="true"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="@string/anonimOlarakDevamEt"
            android:textColor="@color/clickableText"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_giris" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="345dp"
            android:layout_height="57dp"
            android:layout_marginTop="68dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_view"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:translationZ="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="345dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_view"
            android:ems="10"
            android:inputType="textPassword"
            android:translationZ="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:labelFor="@id/input_email"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/input_email"
            app:layout_constraintStart_toStartOf="@+id/input_email" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:labelFor="@id/input_password"
            android:text="@string/sifre"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/input_password"
            app:layout_constraintStart_toStartOf="@+id/input_password" />

        <Button
            android:id="@+id/button_giris"
            android:layout_width="345dp"
            android:layout_height="61dp"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:hapticFeedbackEnabled="true"
            android:soundEffectsEnabled="true"
            android:text="@string/girisYap"
            android:translationZ="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:elevation="8dp"
            android:rotation="0"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

</androidx.constraintlayout.widget.ConstraintLayout>