<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="net.perport.haberuygulamasi.Fragments.HomeFragment"
        android:label="@string/anasayfa"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_homeFragment_to_notificationsFragment"
            app:destination="@id/notificationsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_articleFragment"
            app:destination="@id/articleFragment" />
    </fragment>
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="net.perport.haberuygulamasi.Fragments.NotificationsFragment"
        android:label="@string/bildirimler"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_notificationsFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_notificationsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="net.perport.haberuygulamasi.Fragments.SettingsFragment"
        android:label="@string/ayarlar"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_notificationsFragment"
            app:destination="@id/notificationsFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/newFragment"
        android:name="net.perport.haberuygulamasi.News.NewFragment"
        tools:layout="@layout/fragment_new_list_element">
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="author"
            app:argType="string" />
        <argument
            android:name="ID"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/articleFragment"
        android:name="net.perport.haberuygulamasi.News.ArticleFragment"
        tools:layout="@layout/fragment_new_article">
        <deepLink
            android:id="@+id/deepLink"
            app:uri="perport.net/haberUygulamasi/haberIcerik/{id}" />
        <argument
            android:name="id"
            app:argType="string" />
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="imageUrl"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/commentsFragment"
        android:name="net.perport.haberuygulamasi.Comments.CommentsFragment"
        android:label="fragment_comments"
        tools:layout="@layout/fragment_comments" >
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
</navigation>